# azure_storage_openslide

./: context.cpp  context.h  meson.build  remotetiff.cpp  remotetiff.h
